[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PhantoFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/NewGameButton2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/InstructionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sound Effects/select_menu.wav" type="AudioStream" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 847.0
margin_bottom = 552.0
rect_scale = Vector2( 0.242, 0.245 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -558.5
margin_right = 558.5
margin_bottom = 681.0
alignment = 1

[node name="Empty" type="Label" parent="VBoxContainer"]
margin_right = 1117.0
margin_bottom = 14.0

[node name="Empty6" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1117.0
margin_bottom = 32.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1117.0
margin_bottom = 241.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PHANTO"
align = 1
valign = 1
clip_text = true

[node name="Empty2" type="Label" parent="VBoxContainer"]
margin_top = 245.0
margin_right = 1117.0
margin_bottom = 259.0

[node name="Empty3" type="Label" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 1117.0
margin_bottom = 277.0

[node name="Empty4" type="Label" parent="VBoxContainer"]
margin_top = 281.0
margin_right = 1117.0
margin_bottom = 295.0

[node name="Empty5" type="Label" parent="VBoxContainer"]
margin_top = 299.0
margin_right = 1117.0
margin_bottom = 313.0

[node name="NewGame" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 317.0
margin_right = 1117.0
margin_bottom = 435.0
mouse_default_cursor_shape = 2

[node name="Instructions" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 439.0
margin_right = 1117.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 561.0
margin_right = 1117.0
margin_bottom = 681.0
mouse_default_cursor_shape = 2

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="mouse_entered" from="VBoxContainer/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Instructions" to="." method="_on_Instructions_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Instructions" to="." method="_on_Instructions_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
